Complete Version 7: Buttons to display todos and toggle all

--- a/toDoListApp.html
+++ b/toDoListApp.html
@@ -5,6 +5,8 @@
 	<title>To Do List</title>
 </head>
 <body>
+	<button id="displayTodos">Display todos</button>
+	<button id="toggleAll">Toggle all</button>
 
 
 <script src="toDoListApp.js"></script>
