--- a/toDoListApp.html
+++ b/toDoListApp.html
@@ -5,8 +5,9 @@
 	<title>To Do List</title>
 </head>
 <body>
-	<button id="displayTodos">Display todos</button>
-	<button id="toggleAll">Toggle all</button>
+	<h1>Todo List</h1>
+	<button id="displayTodosButton">Display Todos</button>
+	<button id="toggleAllButton">Toggle All</button>
 
 
 <script src="toDoListApp.js"></script>
