--- a/toDoListApp.html
+++ b/toDoListApp.html
@@ -33,7 +33,11 @@
 		<button onclick="handlers.toggleCompleted()">Toggle Completed</button>
 	</div>
 	
-	
+	<div>
+		<ul>
+			
+		</ul>
+	</div>
 	
 
 
